# graphics

./: .gitignore
hw/: CMakeLists.txt
hw/hw01/hw1/: Assignment1  Cone.cpp  Cube.cpp  Cylinder.cpp  Makefile  Polygon.h  Sphere.cpp  algTest  algebraTest.cpp
hw/hw02/: Makefile  hw2
hw/hw02/demo/: mac-a2
hw/hw02/src/: Assignment2.cpp  Camera.cpp  Camera.h
hw/hw02/src/entities/: Circle.cpp  Circle.h  Cone.cpp  Cube.h  Mobius.h  Polygon.h
hw/hw03/: Makefile  hw3  mac-a2
hw/hw03/src/: Assignment3.cpp  Camera.cpp  Camera.h  Makefile  SceneData.h  SceneParser.cpp  hw3  jaffe.xml
hw/hw03/src/entities/: Cube.cpp  Cylinder.h  Polygon.h  Shape.h  Sphere.h
hw/hw04/src/: Assignment4.cpp  Camera.cpp  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Makefile  Ppm.h  Shape.h  Sphere.cpp  Sphere.h  hw4
hw/hw04/src/data/: all.xml  mirror_test.xml
hw/hw04/src/data/general/: ball.xml  ball2.xml  cube.xml  test.xml
hw/hw04/src/data/tests/: shadowball.xml
hw01/hw1/: Algebra.h  Assignment1  Assignment1.cpp  Circle.cpp  Circle.h  Cone.h  Makefile  Mobius.cpp  Mobius.h  Polygon.h  Shape.h  Sphere.h
labs/Lab08/Handout/: Camera.cpp  Camera.h  Makefile  lab08  main.cpp  object.cpp  ppm.cpp
labs/lab00/: GLUT_example.cpp  example  template  template.cpp
labs/lab01/: Lab01.docx
labs/lab01/Handout/: main.cpp  ply  ply.cpp  ply.h
labs/lab02/: Makefile  lab02
labs/lab03/: lab03  solarSystem.cpp
labs/lab04_but_not_really/: Makefile  lab04
labs/lab05/: Makefile  lab05
labs/lab06/: Makefile  lab06
labs/lab07/: Makefile  lab07
labs/lab9/: app.js
(+19 files in other folders)
