cmake_minimum_required(VERSION 3.9)
project(hw)

set(CMAKE_CXX_STANDARD 11)

add_executable(hw
        hw01/hw1/Algebra.h
        hw01/hw1/algebraTest.cpp
        hw01/hw1/Assignment1.cpp
        hw01/hw1/Circle.cpp
        hw01/hw1/Circle.h
        hw01/hw1/Cone.cpp
        hw01/hw1/Cone.h
        hw01/hw1/Cube.cpp
        hw01/hw1/Cube.h
        hw01/hw1/Cylinder.cpp
        hw01/hw1/Cylinder.h
        hw01/hw1/Mobius.cpp
        hw01/hw1/Mobius.h
        hw01/hw1/Polygon.h
        hw01/hw1/Shape.h
        hw01/hw1/Sphere.cpp
        hw01/hw1/Sphere.h
        hw02/src/entities/Circle.cpp
        hw02/src/entities/Circle.h
        hw02/src/entities/Cone.cpp
        hw02/src/entities/Cone.h
        hw02/src/entities/Cube.cpp
        hw02/src/entities/Cube.h
        hw02/src/entities/Cylinder.cpp
        hw02/src/entities/Cylinder.h
        hw02/src/entities/Mobius.cpp
        hw02/src/entities/Mobius.h
        hw02/src/entities/Polygon.h
        hw02/src/entities/Shape.h
        hw02/src/entities/Sphere.cpp
        hw02/src/entities/Sphere.h
        hw02/src/math/Algebra.h
        hw02/src/Assignment2.cpp
        hw02/src/Camera.cpp
        hw02/src/Camera.h
        hw03/src/Assignment3.cpp
        hw03/src/SceneData.h
        hw03/src/SceneParser.cpp
        hw03/src/SceneParser.h
        hw03/src/tinystr.cpp
        hw03/src/tinystr.h
        hw03/src/tinyxml.cpp
        hw03/src/tinyxml.h
        hw03/src/tinyxmlerror.cpp
        hw03/src/tinyxmlparser.cpp)
